--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,6 @@
         <a href="{{url_for('contacts')}}">Контакты</a>  <!-- Создание ссылки на страницу "Контакты" -->
         <h1>Главная</h1>  <!-- Заголовок страницы -->
         <p>Спортивные товары</p>  <!-- Абзац с текстом о спортивных товарах -->
+        <a href="sport.pdf" download>Скачать файл</a>
     </body>
 </html>
